--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -29,6 +29,7 @@
 .search-box {
   width: 80%;
   border: 2px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50px;
 }
 
 .search-box i {
@@ -115,4 +116,71 @@ header ul li a:hover {
 }
 .open {
   display: none;
+}
+
+.search.active {
+  height: 12vh;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: -1px 11px 24px -11px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+
+@media (max-width: 768px) {
+  header ul {
+    padding-top: 30px;
+  }
+  .nav-links-MobileMenu {
+    position: absolute;
+    display: block;
+    list-style-type: none;
+    left: 0;
+    top: 0;
+    transition: 0.5s;
+    width: 60%;
+    height: 100vh;
+    background-color: #fff;
+    z-index: 888;
+    box-shadow: rgba(50, 50, 93, 0.23) 0 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0 30px 60px -30px;
+  }
+  header ul li {
+    width: 100%;
+    transition: all 0.5s ease-in-out;
+    text-transform: uppercase;
+    line-height: 70px;
+  }
+  header .link {
+    display: none;
+  }
+  .close,
+  .open {
+    position: absolute;
+    top: 35px;
+    right: 20px;
+    color: #ff014f;
+    display: block;
+    font-size: 25px;
+    z-index: 999;
+  }
+  .open {
+    top: 18%;
+    right: 30px;
+    background: #e94560;
+  }
+  .close {
+    right: 45%;
+  }
+  .close .home-btn {
+    background: linear-gradient(145deg, #e2e8e2, #ffffff);
+    color: #ff014f;
+    border-radius: 50px;
+    padding: 0;
+    width: 60px;
+    height: 60px;
+    line-height: 60%;
+  }
 }
